--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -330,6 +330,18 @@ html {
 		margin: 0px;
 	}
 
+	/* wp 6.4 updates for Twenty Twenthy Four theme */
+	body
+		.wp-site-blocks
+		.entry-content.is-layout-constrained
+		> .c9-grid:where(:not(.alignleft):not(.alignright):not(.alignfull)) {
+		margin-left: calc((-100vw + 100%) / 2) !important;
+		margin-right: calc((-100vw + 100%) / 2) !important;
+		max-width: 100vw;
+		width: 100vw;
+		box-sizing: border-box;
+	}
+
 	.c9-grid .container-narrow,
 	.c9-grid .container,
 	.c9-grid .container.alignwide,
